# stepmix

./: .gitignore  .readthedocs.yaml  .travis.yaml  .travis.yml  LICENSE  README-dev.md  README.md  demo.py  dev-requirements.txt  pyproject.toml  requirements.txt  run_bakk_simulation.py  setup.py
.github/workflows/: github-actions-demo.yml  pytest.yaml
docs/source/: api.rst  conf.py  index.rst  installation.rst  tutorials.rst  usage.rst
lca/: corrections.py  datasets.py  emission.py  lca.py  utils.py
lca/emission/: build_emission.py  categorical.py  covariate.py  emission.py  gaussian.py  nested.py
scripts/: README.md  StepMix_Article_Table11.py  demo.py  demo_covariate.py  example_real_GSS.py  example_sim_complete.py  example_sim_covariate.py  example_sim_outcome.py  fiml.py  gifs.py  paper_examples.py  run_all.sh  run_bakk_simulation.py  run_bakk_simulation_complete.py  run_package_comparison.py  run_real_example.py
scripts/Data/: banknote.csv  carcinoma.csv  datasim_Dist.csv  datasim_cov.csv  diabetes.csv
stepmix/: __init__.py  bootstrap.py  corrections.py  datasets.py  stepmix.py  utils.py
stepmix/emission/: build_emission.py  categorical.py  covariate.py  emission.py  gaussian.py  nested.py
test/: README.md  conftest.py  test_benchmarks.py  test_benchmarks_supervised.py  test_bootstrap.py  test_buffers.py  test_df_parameters.py  test_emission.py  test_fiml.py  test_inputs.py  test_n_parameters.py  test_opt.py  test_progress_bar.py  test_random_state.py  test_sample_weight.py  test_sklearn.py  test_steps.py
