# pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
#requires      = ["setuptools>=61.0.0", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "stepmix"
description = "A Python package for stepwise estimation of latent class models with measurement and structural components. The package can also be used to fit mixture models with various observed random variables."
readme = "README.md"
authors = [
    {name = "Sacha Morin", email = "sacha.morin@mila.quebec"},
    {name = "Robin Legault", email = "robin.legault@umontreal.ca"},
    {name = "Charles-Édouard Giguère", email = "ce.giguere@gmail.com"},
    {name = "Éric Lacourse", email = "eric.lacourse@umontreal.ca"},
    {name = "Roxane de la Sablonnière", email = "roxane.de.la.sablonniere@umontreal.ca"},
]
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["clustering", "mixtures", "lca", "em", "latent-class-analysis", "expectation–maximization"]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn >= 1.0.0",
    "scipy",
    "matplotlib",
    "tqdm",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "flit", "pytest", "sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://stepmix.readthedocs.io/en/latest/"

[tool.bumpver]
current_version = "1.2.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
#    'version = "{version}"',
    'current_version = "{version}"',
]
"stepmix/__init__.py" = [
    '__version__ = "{version}"',
]

"docs/source/conf.py" = [
    'version = "{version}"',
]

